# fast_detector_Response

./: README.md  config.xml  fast_analysis.py  fast_resp.py  launch_resp.sh  launch_splitted_response.sh  load_config.sh  merge.py  splitted_fast_resp.py
configs/configExample1/: config.txt
configs/configExample2/: config.txt
drdf/: README.md  setup.py
drdf/drdf/: __init__.py
drdf/drdf.egg-info/: PKG-INFO  SOURCES.txt
drdf/libdrdf/: CMakeLists.txt  Doxygen.conf  drdf.cpp  drdf.h  test.cpp
drdf/tests/: read_file.py  write_file.py
drdf/tools/: CMakeLists.txt  dr2root.cpp
drdf_tests/: read_file.py  write_file.py
